Revise project descriptions in index.html
Updated project descriptions for clarity and detail.

--- a/index.html
+++ b/index.html
@@ -443,8 +443,7 @@
                                     </button>
                                     <div class="collapse mt-3" id="desc-salvm">
                                         <div class="card card-body bg-transparent border-light text-start">
-                                            The SALVM (System for Assisted Localization and Viewing of Motorcyclists) project aims to enhance the safety of Vulnerable Road Users (VRUs) through a Cooperative Intelligent Transport System (C-ITS) platform. The system uses camera-equipped RoadSide Units (RSUs) to detect VRUs, while vehicles are equipped with On-Board Units (OBUs) to receive real-time alerts.
-                                        </div>
+                                         The SALVM project aims to enhance road safety for vulnerable users through an intelligent C-ITS platform. By integrating advanced communication systems like C-V2X and AI, the system enables real-time communication between vehicles and infrastructure to provide timely danger warnings, reduce accidents, and optimize urban traffic flow.                                        </div>
                                     </div>
                                 </div>
                             </div>
@@ -464,8 +463,7 @@
                                     </button>
                                     <div class="collapse mt-3" id="desc-satellite">
                                         <div class="card card-body bg-transparent border-light text-start">
-                                            This project involves the simulation and control of a satellite's attitude using advanced algorithms. Developed in MATLAB/Simulink, it explores PID and LQR control strategies to stabilize the satellite and orient it towards a desired target, analyzing performance under various simulated conditions.
-                                        </div>
+A simulation project developed in MATLAB and Simulink to model and control a satellite's attitude. It implements and compares two control strategies, PID and LQR, to stabilize the satellite's orientation and align it with a desired target, analyzing performance under different simulated space conditions.                                        </div>
                                     </div>
                                 </div>
                             </div>
@@ -485,8 +483,7 @@
                                     </button>
                                     <div class="collapse mt-3" id="desc-parking">
                                         <div class="card card-body bg-transparent border-light text-start">
-                                            An IoT project for intelligent parking management. It uses sensors, a cloud platform (ThingsBoard), and a mobile app to monitor and reserve parking spots in real-time. The system is designed to reduce traffic congestion and streamline the parking process for users.
-                                        </div>
+An intelligent parking system based on an ESP32 microcontroller. This IoT project monitors vehicle entries and exits to manage parking space availability in real-time. A companion website, built with PHP, allows for remote monitoring of the lot's status and available spaces.                                        </div>
                                     </div>
                                 </div>
                             </div>
@@ -506,8 +503,7 @@
                                     </button>
                                     <div class="collapse mt-3" id="desc-register">
                                         <div class="card card-body bg-transparent border-light text-start">
-                                            A web application for managing a school's electronic register. Developed with Java and Spring Boot for the backend, it handles student data, grades, and attendance, providing a robust and secure system for educational institutions.
-                                        </div>
+A PHP-based web application designed to streamline communication between a school's secretariat and its students. The system allows administrative staff to upload grades, while students can log in to a dedicated portal to view their academic results and year-end status.                                        </div>
                                     </div>
                                 </div>
                             </div>
@@ -527,8 +523,7 @@
                                     </button>
                                     <div class="collapse mt-3" id="desc-pasm">
                                         <div class="card card-body bg-transparent border-light text-start">
-                                           This project focused on optimizing the business processes for PASM, a precision mechanics company. It involved analyzing workflows and implementing software solutions, including a Python-based management system, to improve efficiency and automate tasks.
-                                        </div>
+A management software developed in Python for PASM, a precision mechanics company. The application is designed to optimize business workflows by managing customer orders and automatically generating corresponding invoices in PDF format, improving operational efficiency.                                        </div>
                                     </div>
                                 </div>
                             </div>
