Revise AI Software Engineer to AI & Automotive Engineer
Updated job title and description for AI role.

--- a/index.html
+++ b/index.html
@@ -218,8 +218,8 @@
                                 <h3>Experience</h3>
                                 <div class="row g-4">
                                     <div class="col-6">
-                                        <h5>AI Software Engineer</h5>
-                                        <h6>Object Detection, Computer Vision, C-ITS, YOLO </h6>
+                                        <h5>AI & Automotive Engineer</h5>
+                                        <h6>Experienced in developing and deploying computer vision solutions using state-of-the-art object detection models such as YOLO and RT-DETR. Specialized in Cooperative Intelligent Transport Systems (C-ITS) and V2X (Vehicle-to-Everything) communication, with hands-on expertise in embedded systems integration, particularly using Cohda Wireless and NXP hardware platforms. Skilled in end-to-end AI model training, from dataset preparation and model architecture tuning to deployment on resource-constrained environments. </h6>
                                         <p>South Engineering srl</p>
                                         <small>Nov 2024 - Present</small>
                                     </div>
