--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
                     </div>
                     <div class="col-lg-5">
                         <div class="home-image">
-                            <img src="images/alexmain.jpeg" alt="">
+                            <img src="images/alexmain.jpeg" alt="Alessandro Magliacane - portrait" class="img-fluid" loading="lazy" decoding="async">
                         </div>
                     </div>
                 </div>
@@ -196,7 +196,7 @@
                     <div class="col-md-5 col-xl-4 mx-auto sticky-md-top">
                         <div class="about-img-box">
                             <div class="about-img">
-                                <img src="images/alexbio.jpeg" title="" alt="">
+                                <img src="images/alexbio.jpeg" title="" alt="Alessandro Magliacane - profile" class="img-fluid" loading="lazy" decoding="async">
                             </div>
                             <div class="nav social-icons justify-content-center">
                                 <a class="facebook" href="https://www.facebook.com/alessandro.magliacane"><i class="fab fa-facebook-f"></i></a>
@@ -397,13 +397,13 @@
     <div id="highlightsCarousel" class="carousel slide custom-carousel" data-bs-ride="carousel">
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img src="images/grad.jpeg" class="d-block w-100" alt="Graduation photo">
+                <img src="images/grad.jpeg" class="d-block w-100" alt="Graduation photo" loading="lazy" decoding="async">
             </div>
             <div class="carousel-item">
-                <img src="images/tml.jpeg" class="d-block w-100" alt="Tomorrowland photo 1">
+                <img src="images/tml.jpeg" class="d-block w-100" alt="Tomorrowland photo 1" loading="lazy" decoding="async">
             </div>
             <div class="carousel-item">
-                <img src="images/tml2.jpeg" class="d-block w-100" alt="Tomorrowland photo 2">
+                <img src="images/tml2.jpeg" class="d-block w-100" alt="Tomorrowland photo 2" loading="lazy" decoding="async">
             </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#highlightsCarousel" data-bs-slide="prev">
@@ -434,7 +434,7 @@
                         <div class="col-12 col-md-8 col-lg-6 mx-auto">
                             <div class="project-card text-center p-3">
                                 <a href="https://salvm.southengineering.it/" target="_blank">
-                                    <img src="images/salvm.png" alt="SALVM" class="img-fluid mb-3">
+                                    <img src="images/salvm.png" alt="SALVM" class="img-fluid mb-3" loading="lazy" decoding="async">
                                 </a>
                                 <div class="card-body">
                                     <h5 class="card-title">SALVM</h5>
@@ -454,7 +454,7 @@
                         <div class="col-12 col-md-8 col-lg-6 mx-auto">
                              <div class="project-card text-center p-3">
                                 <a href="https://github.com/MrAlexIV/SatelliteAttitudeControl" target="_blank">
-                                    <img src="images/satellite.png" alt="Satellite Attitude Control" class="img-fluid mb-3">
+                                    <img src="images/satellite.png" alt="Satellite Attitude Control" class="img-fluid mb-3" loading="lazy" decoding="async">
                                 </a>
                                 <div class="card-body">
                                     <h5 class="card-title">Satellite Attitude Control</h5>
@@ -474,7 +474,7 @@ A simulation project developed in MATLAB and Simulink to model and control a sat
                         <div class="col-12 col-md-8 col-lg-6 mx-auto">
                              <div class="project-card text-center p-3">
                                 <a href="https://github.com/MrAlexIV/SmartParking/tree/main" target="_blank">
-                                    <img src="images/park.png" alt="Smart Parking IoT" class="img-fluid mb-3">
+                                    <img src="images/park.png" alt="Smart Parking IoT" class="img-fluid mb-3" loading="lazy" decoding="async">
                                 </a>
                                 <div class="card-body">
                                     <h5 class="card-title">Smart Parking IoT</h5>
@@ -494,7 +494,7 @@ An intelligent parking system based on an ESP32 microcontroller. This IoT projec
                         <div class="col-12 col-md-8 col-lg-6 mx-auto">
                              <div class="project-card text-center p-3">
                                 <a href="https://github.com/MrAlexIV/eregister" target="_blank">
-                                    <img src="images/stud.png" alt="Electronic Register" class="img-fluid mb-3">
+                                    <img src="images/stud.png" alt="Electronic Register" class="img-fluid mb-3" loading="lazy" decoding="async">
                                 </a>
                                 <div class="card-body">
                                     <h5 class="card-title">Electronic Register</h5>
@@ -514,7 +514,7 @@ A PHP-based web application designed to streamline communication between a schoo
                         <div class="col-12 col-md-8 col-lg-6 mx-auto">
                              <div class="project-card text-center p-3">
                                 <a href="https://github.com/MrAlexIV/pasm" target="_blank">
-                                    <img src="images/pasm.PNG" alt="PASM Business Process Optimization" class="img-fluid mb-3">
+                                    <img src="images/pasm.PNG" alt="PASM Business Process Optimization" class="img-fluid mb-3" loading="lazy" decoding="async">
                                 </a>
                                 <div class="card-body">
                                     <h5 class="card-title">PASM: Business Process Optimization</h5>
@@ -607,6 +607,63 @@ A management software developed in Python for PASM, a precision mechanics compan
                 }
             });
         });
+    </script>
+
+    <!-- Mobile UX: close collapsed navbar when a link is clicked (only on small screens) -->
+    <script>
+        (function() {
+            var bsCollapse = document.getElementById('navbar-collapse-toggle');
+            if (!bsCollapse) return;
+            var navLinks = bsCollapse.querySelectorAll('.nav-link');
+            navLinks.forEach(function(link) {
+                link.addEventListener('click', function() {
+                    // If the collapse is visible (mobile widths), hide it
+                    var bs = bootstrap.Collapse.getInstance(bsCollapse);
+                    if (!bs) {
+                        // initialize if needed
+                        try { bs = new bootstrap.Collapse(bsCollapse, {toggle:false}); } catch(e){}
+                    }
+                    if (window.innerWidth < 992 && bs) {
+                        bs.hide();
+                    }
+                });
+            });
+        })();
+    </script>
+
+    <!-- Backdrop used to dim content under the mobile navbar when it opens -->
+    <div id="nav-backdrop" class="nav-backdrop" aria-hidden="true"></div>
+
+    <script>
+        (function() {
+            var bsCollapse = document.getElementById('navbar-collapse-toggle');
+            var backdrop = document.getElementById('nav-backdrop');
+            if (!bsCollapse || !backdrop) return;
+
+            // Show backdrop when collapse opens, hide when closes
+            bsCollapse.addEventListener('show.bs.collapse', function () {
+                if (window.innerWidth < 992) {
+                    backdrop.classList.add('show');
+                }
+            });
+            bsCollapse.addEventListener('hide.bs.collapse', function () {
+                backdrop.classList.remove('show');
+            });
+
+            // Click on backdrop closes the navbar on mobile
+            backdrop.addEventListener('click', function () {
+                var bs = bootstrap.Collapse.getInstance(bsCollapse);
+                if (!bs) {
+                    try { bs = new bootstrap.Collapse(bsCollapse, {toggle:false}); } catch(e){}
+                }
+                if (bs) bs.hide();
+            });
+
+            // Also ensure backdrop hides on resize to desktop sizes
+            window.addEventListener('resize', function() {
+                if (window.innerWidth >= 992) backdrop.classList.remove('show');
+            });
+        })();
     </script>
 
 </body>
