aggiornata foto profilo

--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
                     </div>
                     <div class="col-lg-5">
                         <div class="home-image">
-                            <img src="images/alexmain.jpeg" alt="Alessandro Magliacane - portrait" class="img-fluid" loading="lazy" decoding="async">
+                            <img src="images/main.jpeg" alt="Alessandro Magliacane - portrait" class="img-fluid" loading="lazy" decoding="async">
                         </div>
                     </div>
                 </div>
