aggiunte nuove foto personali

--- a/index.html
+++ b/index.html
@@ -405,6 +405,12 @@
             <div class="carousel-item">
                 <img src="images/tml2.jpeg" class="d-block w-100" alt="Tomorrowland photo 2" loading="lazy" decoding="async">
             </div>
+            <div class="carousel-item">
+                <img src="images/Demo_giugno.jpg" class="d-block w-100" alt="Demo SALVM" loading="lazy" decoding="async">
+            </div>
+            <div class="carousel-item">
+                <img src="images/Demo_Novembre.jpg" class="d-block w-100" alt="Demo SALVM dell'evento MOST 2025" loading="lazy" decoding="async">
+            </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#highlightsCarousel" data-bs-slide="prev">
             <span class="carousel-control-prev-icon" aria-hidden="true"></span>
