--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
                                     <span>COMPUTER ENGINEERING:<br> YEARS OF EXPERIENCE</span>
                                 </div>
                                 <div class="exp-box">
-                                    <h5>5</h5>
+                                    <h5>6</h5>
                                     <span>PROJECTS<br> COMPLETED</span>
                                 </div>
                                 <div class="exp-box">
@@ -455,7 +455,26 @@
                             </div>
                         </div>
                     </div>
-
+                    <div class="carousel-item">
+                        <div class="col-12 col-md-8 col-lg-6 mx-auto">
+                            <div class="project-card text-center p-3">
+                                <a href="https://ccam4italy.unina.it/" target="_blank">
+                                    <img src="images/CCAM.png" alt="CCAM4ITALY" class="img-fluid mb-3" loading="lazy" decoding="async">
+                                </a>
+                                <div class="card-body">
+                                    <h5 class="card-title">CCAM4ITALY</h5>
+                                    <button class="btn btn-outline-light btn-sm mt-2" type="button" data-bs-toggle="collapse" data-bs-target="#desc-ccam" aria-expanded="false" aria-controls="desc-ccam">
+                                        Read Description
+                                    </button>
+                                    <div class="collapse mt-3" id="desc-ccam">
+                                        <div class="card card-body bg-transparent border-light text-start">
+                                         The CCAM4Italy project was created with the goal of developing and testing innovative solutions in the field of Cooperative Connected and Automated Mobility (CCAM). Imagine a world where traffic flows smoothly, where road safety is ensured by intelligent technologies, and where vehicles are connected to one another and to the surrounding infrastructure. This is the future that the CCAM4Italy project is building today, an innovative initiative that develops advanced solutions for connected and automated mobility, promoting safer, more efficient, and more sustainable transportation. Through a network of living labs and technological platforms concentrated in the Metropolitan Area of Naples, and supported by academic and industrial laboratories across Italy, we test solutions both in real-world scenarios and through virtual digital twins to improve traffic management, enhance road safety, and reduce environmental impact. Our goal is to transform everyday mobility into a smoother, more sustainable, and more intelligent experience for everyone.
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                     <div class="carousel-item">
                         <div class="col-12 col-md-8 col-lg-6 mx-auto">
                              <div class="project-card text-center p-3">
