fix foto biografia

--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
                     <div class="col-md-5 col-xl-4 mx-auto sticky-md-top">
                         <div class="about-img-box">
                             <div class="about-img">
-                                <img src="images/alexbio.jpeg" title="" alt="Alessandro Magliacane - profile" class="img-fluid" loading="lazy" decoding="async">
+                                <img src="images/biography.jpeg" title="" alt="Alessandro Magliacane - profile" class="img-fluid" loading="lazy" decoding="async">
                             </div>
                             <div class="nav social-icons justify-content-center">
                                 <a class="facebook" href="https://www.facebook.com/alessandro.magliacane"><i class="fab fa-facebook-f"></i></a>
